removed dependencies, added input type=file

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,21 +7,18 @@
   float: left;
   clear: both;
   width: 300px;
-  height: 240px;
+  height: 300px;
   border: 1px solid #000000; }
 
 .boxWrapper.auto {
   height: auto;
   min-height: 20px; }
 
-#example, #hiddenImg {
+#preview {
   float: left;
   clear: both;
   width: 300px;
-  height: 240px; }
-
-#hiddenImg {
-  display: none; }
+  height: 300px; }
 
 #qrContent {
   float: left;
@@ -35,32 +32,5 @@
   word-break: break-all;
   word-wrap: break-word; }
 
-.photobooth ul, .resizehandle {
-  display: none; }
-
-.button {
-  float: left;
-  clear: both;
-  text-align: center;
-  width: 300px;
-  height: 30px;
-  padding: 20px 0; }
-
-#button {
-  display: inline-block;
-  min-width: 100px;
-  text-align: center;
-  height: 20px;
-  line-height: 20px;
-  background: #000000;
-  color: #ffffff;
-  padding: 5px 10px; }
-
-#example video {
-  max-width: 300px;
-  height: auto;
-  float: left; }
-
-.pageWrapper.cheese #example {
-  height: auto;
-  min-height: 100px; }
+form {
+  margin: 10px auto; }
